--- a/src/style.css
+++ b/src/style.css
@@ -2,8 +2,33 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    border: .5px solid red;
 }
 
+html {
+    height: 100vh;
+    font-family: "DM Serif Text", serif;
+    background-color: rgb(0, 0, 0, 0.1);
+}
 
+.title {
+    display: flex;
+    justify-content: center;
+    font-size: 50px;
+}
+
+nav {
+    justify-self: center;
+    list-style-type: none;
+    gap: 15px;
+}
+
+.nav-bar {
+    display: flex;
+    justify-content: center;
+    width: 400px;
+}
+
+li:hover {
+    width: 20px;
+}
 
