--- a/src/style.css
+++ b/src/style.css
@@ -1,34 +1,11 @@
-* { /* reset */
+body {
+    font-family: 'DM Serif Text', serif;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-}
-
-html {
-    height: 100vh;
-    font-family: "DM Serif Text", serif;
-    background-color: rgb(0, 0, 0, 0.1);
-}
-
-.title {
+    background-color: #f9f9f9;
+    color: #2b2b2b;
+    line-height: 1.6;
     display: flex;
-    justify-content: center;
-    font-size: 50px;
+    flex-direction: column;
+    min-height: 100vh;
 }
-
-nav {
-    justify-self: center;
-    list-style-type: none;
-    gap: 15px;
-}
-
-.nav-bar {
-    display: flex;
-    justify-content: center;
-    width: 400px;
-}
-
-li:hover {
-    width: 20px;
-}
-
