--- a/src/style.css
+++ b/src/style.css
@@ -59,3 +59,16 @@ main p {
     margin-bottom: 1rem;
     text-align: justify;
 }
+
+.main-footer {
+    text-align: center;
+    background-color: #333333;
+    color: #f9f9f9;
+    padding: 1rem 0;
+    margin-top: 2rem;
+}
+
+.main-footer p {
+    margin: 0;
+    font-size: 0.9rem;
+}
