--- a/src/style.scss
+++ b/src/style.scss
@@ -1,56 +1,161 @@
-body {
-    font-family: 'DM Serif Text', serif;
+* {
     margin: 0;
     padding: 0;
-    background-color: #f9f9f9;
-    color: #2b2b2b;
-    line-height: 1.6;
+    box-sizing: border-box;
+}
+
+body {
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+
+    height: 100vh;
+
+    font-family: 'DM Serif Text', serif;
+    color: #f9f9f9;
+
+    background-image: url(imgs/fondo.webp);
+    background-size: auto;
+    background-position: center;
+}
+
+body::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.9);
+    z-index: -1;
 }
 
 .main-header {
-    background-color: #333333;
-    color: #f9f9f9;
-    padding: 1rem 0;
-    text-align: center;
+    display: flex;
+    flex-direction: column-reverse;
 
-    & .nav-bar {
-        list-style: none;
-        margin: 0;
-        padding: 0;
-        display: flex;
-        justify-content: center;
-        gap: 1.5rem;
-
-        & a {
-            color: #f14030;
-            text-decoration: none;
-            font-size: 1.2rem;
-            transition: color 0.3s ease-in-out;
-            
-            & a:hover {
-                color: #fafafa;
-            }
+    @media screen and (min-width: 992px) {
+        & {
+            flex-direction: column;
         }
     }
 }
 
+#menu {
+    display: none;
+
+    &:checked + .nav-bar {
+        display: block;
+    }
+}
+
+.nav-bar {
+    display: none;
+
+    &__nav-list {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        list-style-type: none;
+
+        @media screen and (min-width: 992px) {
+            & {
+                flex-direction: row;
+            }
+        }
+    }
+
+    &__nav-item { /* .nav-bar__nav-item */
+        text-align: center;
+        background-color: #f9f9f9;
+    }
+
+    &__nav-link {
+        display: block;
+        padding: 1rem 2rem;
+        color: #fcc379;
+        background-color: #1a1a1a;
+        width: 100%;
+    }
+
+    @media screen and (min-width: 992px) {
+        & {
+            display: block; /* muestra el menú */
+            order: 1;
+        }
+    }
+}
+
+/* SEARCH BAR */
+.search-bar {
+    display: flex;
+    justify-content: end;
+    height: 50px;
+
+    background-color: #1a1a1a;
+}
+
+/* MENÚ TOOGLE */
+.menu-toogle {
+    display: block;
+
+    flex: 0 0 3rem;
+    position: relative;
+
+    &__label { 
+        display: block;
+        background-color: #1a1a1a;
+        height: 100%;
+    }
+
+    &__top-bread,
+    &__meat,
+    &__bottom-bread {
+        displaY: block;
+        background-color: #fcc379;
+        height: .4rem;
+        position: absolute;
+        left: .2rem;
+        right: .2rem;
+    }
+
+    &__top-bread {
+        top: .5rem;
+    }
+
+    &__meat {
+        top: 50%;
+        margin-top: -.2rem;
+    }
+
+    &__bottom-bread {
+        bottom: .5rem;
+    }
+
+    @media screen and (min-width: 992px) {
+        & {
+            display: none;
+        }        
+    }
+
+}
+
 main {
+    flex: 1;
+    
     padding: 2rem 1.5rem;
     max-width: 800px;
     margin: 0 auto;
     flex: 1;
 
     & h2 {
+        font-size: 30px;
         text-align: center;
         margin-bottom: 1rem;
-        color: #1a73e8;
+        color: #fcc379;
     }
     
     & h3 {
-        color: #f14030;
+        color: #fcc379;
         margin-top: 1.5rem;
     }
     
@@ -60,12 +165,12 @@ main {
     }
 }
 
-.main-footer {
+footer {
+
     text-align: center;
-    background-color: #333333;
-    color: #f9f9f9;
+    background-color: #1a1a1a;
+    color: #fcc379;
     padding: 1rem 0;
-    margin-top: 2rem;
 
     & p {
         margin: 0;
