--- a/src/style.scss
+++ b/src/style.scss
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    // border: .5px red solid;
 }
 
 body {
@@ -9,10 +10,10 @@ body {
     flex-direction: column;
 
     height: 100vh;
-
+    
     font-family: 'DM Serif Text', serif;
     color: #f9f9f9;
-
+    
     background-image: url(imgs/fondo.webp);
     background-size: auto;
     background-position: center;
@@ -20,9 +21,7 @@ body {
 
 body::before {
     content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
+    position: fixed;
     width: 100vw;
     height: 100vh;
     background: rgba(0, 0, 0, 0.9);
@@ -32,12 +31,6 @@ body::before {
 .main-header {
     display: flex;
     flex-direction: column-reverse;
-
-    @media screen and (min-width: 992px) {
-        & {
-            flex-direction: column;
-        }
-    }
 }
 
 #menu {
@@ -56,12 +49,6 @@ body::before {
         flex-direction: column;
         justify-content: center;
         list-style-type: none;
-
-        @media screen and (min-width: 992px) {
-            & {
-                flex-direction: row;
-            }
-        }
     }
 
     &__nav-item { /* .nav-bar__nav-item */
@@ -77,10 +64,9 @@ body::before {
         width: 100%;
     }
 
-    @media screen and (min-width: 992px) {
+    @media screen and (min-width: 576px) {
         & {
-            display: block; /* muestra el menú */
-            order: 1;
+            display: block;
         }
     }
 }
@@ -130,38 +116,42 @@ body::before {
     &__bottom-bread {
         bottom: .5rem;
     }
-
-    @media screen and (min-width: 992px) {
-        & {
-            display: none;
-        }        
-    }
-
 }
 
 main {
-    flex: 1;
+    display: flex;
+    flex-direction: column;
     
     padding: 2rem 1.5rem;
-    max-width: 800px;
+    width: 90vw;
     margin: 0 auto;
     flex: 1;
-
-    & h2 {
+    
+    & h1 {
         font-size: 30px;
         text-align: center;
         margin-bottom: 1rem;
         color: #fcc379;
     }
+
+    & .main-main { 
+        
+        & h2 {
+            color: #fcc379;
+            margin-top: 1.5rem;
+        }
+        
+        & p {
+            margin-bottom: 1rem;
+            text-align: justify;
+        }
     
-    & h3 {
-        color: #fcc379;
-        margin-top: 1.5rem;
-    }
+        &__side-column {
+                display: none;
     
-    & p {
-        margin-bottom: 1rem;
-        text-align: justify;
+                width: 40vw;
+    
+            }
     }
 }
 
