--- a/src/ejercicioA/ejercicioA.scss
+++ b/src/ejercicioA/ejercicioA.scss
@@ -14,7 +14,7 @@ body {
     font-family: 'DM Serif Text', serif;
     color: #f9f9f9;
     
-    background-image: url(imgs/fondo.webp);
+    background-image: url(../../imgs/fondo.webp);
     background-size: cover;
     background-position: center;
 }
