--- a/src/ejercicioB/ejercicioB.scss
+++ b/src/ejercicioB/ejercicioB.scss
@@ -1,3 +1,13 @@
+/*  MEDIA QUERIES */
+/*  
+    X-Small    - 576px
+    Small      - ≥576px
+    Medium     - ≥768px
+    Large      - ≥992px
+    X-large    - ≥1200px
+    XX-large   - ≥1400px
+*/
+
 body {
     background-color: rgb(255, 255, 255, 0.8);
 }
@@ -5,17 +15,49 @@ body {
 .container {
     display: flex;
     justify-content: center;
-    align-items: center;
     flex-wrap: wrap;
 
     width: 80vw;
     margin: auto;
-    border-radius: 10px;
-    gap: 10px;
 
-    background-color: rgb(0, 0, 0, 0.5);
+    @media screen and (min-width: 992px) {
+        & {
+            width: 95vw;
+        }
+    }
+
+    @media screen and (min-width: 1400px) {
+        & {
+            width: 100vw;
+        }
+    }
 }
 
 img {
+    width: 90%;
     
+    @media screen and (min-width: 576px) {
+        & {
+            width: 50%;
+        }
+    }
+    
+    @media screen and (min-width: 768px) {
+        & {
+            width: 33%;
+        }
+    }
+
+    @media screen and (min-width: 1200px) {
+        & {
+            width: 32%;
+            margin: 5px;
+        }
+    }
+
+    @media screen and (min-width: 1400px) {
+        & {
+            width: auto;
+        }
+    }
 }
