Comenzamos con ejercicioC

--- a/src/ejercicioB/ejercicioB.scss
+++ b/src/ejercicioB/ejercicioB.scss
@@ -1,6 +1,6 @@
 /*  MEDIA QUERIES */
 /*  
-    X-Small    - 576px
+    X-Small    - >576px
     Small      - ≥576px
     Medium     - ≥768px
     Large      - ≥992px
