--- a/src/ejercicioD/ejercicioD.scss
+++ b/src/ejercicioD/ejercicioD.scss
@@ -8,3 +8,54 @@
     XX-large   - ≥1400px
 */
 
+.card-container {
+    display: flex;
+    flex-direction: column;
+
+    background-color: #dbdbdb;
+
+    margin: auto;
+    padding: 20px;
+
+    border-radius: 10px;
+
+    width: min-content;
+    height: min-content;
+
+    img {
+        justify-self: center;
+        align-self: center;
+
+        width: 400px;
+
+        margin: 5px;
+    }
+
+    h1 {
+        justify-self: center;
+        align-self: center;
+
+        text-align: center;
+
+        margin: 5px;
+    }
+
+    p {
+        justify-self: center;
+        align-self: center;
+
+        margin: 5px;
+
+        text-align: justify;
+    }
+
+    button {
+        width: min-content;
+
+        align-self: center;
+
+        margin-top: 10px;
+        padding: 5px;
+    }
+
+}
